Fix logo popping out of box (maybe)

--- a/style/components/wiki-path.css
+++ b/style/components/wiki-path.css
@@ -6,6 +6,7 @@
     border-radius: 0.7rem;
     margin-bottom: 15px;
     margin-left: 20px;
+    min-height: 50px;
 }
 
 .wiki-path-icon-div {
